--- a/simplistic-html5-java.html
+++ b/simplistic-html5-java.html
@@ -1,81 +1,69 @@
 <!DOCTYPE html>
-<!--Everything you write should be using markups -->
-<!-- head section is communicating about the page to the browser -->
-<!-- Anything you write under head is not displayed on the browser content page. -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:ng-app lang="en">
-<!-- All the Tags should be under <html> -->
-<!-- Describing about the page -->
-<!-- Required meta tags -->
-<!-- Describing about the page -->
-<!-- head section is communicating about the page to the browser -->
-<!-- Anything you write under head is not displayed on the browser content page. -->
-<meta charset="UTF-8">
-<title>Semantic tags with JavaScript support for IE 7 and 8</title>
-<!-- Viewport for responsive web design -->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="google-adsense-account" content="ca-pub-9639638377144073">
-        <meta property="og:title" content="A Basic HTML5 Template">
-        <meta property="og:type" content="website">
-        <meta property="og:description" content="A simple HTML5 Template for new projects.">
-        <meta property="og:image" content="image.png">
-        <meta name="keywords" content="HTML5, Node.js, Jquery">
-        <meta name="author" content="Orris Baker">
+    <title>Semantic tags with JavaScript support for IE 7 and 8</title>
+    <meta charset="UTF-8">
+	<!-- Viewport for responsive web design -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-adsense-account" content="ca-pub-9639638377144073">
+    <meta property="og:title" content="A Basic HTML5 Template">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="A simple HTML5 Template for new projects.">
+    <meta property="og:image" content="image.png">
+    <meta name="keywords" content="HTML5, Node.js, Jquery">
+    <meta name="author" content="Orris Baker">
 		
-		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-		<!-- <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8"> -->
-        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="./script.js"></script> 
-        <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
-        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
-		<link rel="stylesheet" href="./style.css"> 
-        <link rel="stylesheet" href="./style[1].css"> 
-        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+	<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+    <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="./script.js"></script> 
+    <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+	<link rel="stylesheet" href="./style.css"> 
+    <link rel="stylesheet" href="./style[1].css"> 
+    <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
 	   
-        <link rel="stylesheet" href="./nav[1].css">
-        <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-        <link rel="stylesheet" href="./font-awesome.min[1].css">
-		<link rel="icon" type="image/png" href="./weed.jpg">
-		<link rel="icon" type="image/png" href="./flexy-logo.png">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta property="og:title" content="A Basic HTML5 Template" />
-<meta property="og:type" content="video.movie" />
-<meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-<meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
-<meta name="description" content="A simple HTML5 Template for new projects.">
-<meta name="author" content="Orris A BakerJr">
-<meta name="google-adsense-account" content="ca-pub-9639638377144073">
-<meta property="og:title" content="A Basic HTML5 Template">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
-<meta property="og:description" content="A simple HTML5 Template for new projects.">
-<meta property="og:image" content="image.png">
-<meta name="theme-color" content="#712cf9">
-<meta name="keywords" content="HTML5, Node.js, Jquery">
-<meta name="author" content="Ian Andolina">
+    <link rel="stylesheet" href="./nav[1].css">
+    <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="./font-awesome.min[1].css">
+	<link rel="icon" type="image/png" href="./weed.jpg">
+	<link rel="icon" type="image/png" href="./flexy-logo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="A Basic HTML5 Template" />
+    <meta property="og:type" content="video.movie" />
+    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
+    <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+    <meta name="description" content="A simple HTML5 Template for new projects.">
+    <meta name="author" content="Orris A BakerJr">
+    <meta name="google-adsense-account" content="ca-pub-9639638377144073">
+    <meta property="og:title" content="A Basic HTML5 Template">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
+    <meta property="og:description" content="A simple HTML5 Template for new projects.">
+    <meta property="og:image" content="image.png">
+    <meta name="theme-color" content="#712cf9">
+    <meta name="keywords" content="HTML5, Node.js, Jquery">
+    <meta name="author" content="Ian Andolina">
+    <!-- Optional Metadata-->
+    <meta property="og:audio" content="https://example.com/sound.mp3" />
+    <meta property="og:audio:secure_url" content="https://secure.example.com/sound.mp3" />
+    <meta property="og:audio:type" content="audio/mpeg" />
 
-<!-- Optional Metadata-->
-<meta property="og:audio" content="https://example.com/sound.mp3" />
-<meta property="og:audio:secure_url" content="https://secure.example.com/sound.mp3" />
-<meta property="og:audio:type" content="audio/mpeg" />
+    <meta property="og:audio" content="https://example.com/bond/theme.mp3" />
+    <meta property="og:description content="Sean Connery found fame and fortune as the suave, sophisticated British agent, James Bond." />
+    <meta property="og:determiner" content="the" />
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:locale:alternate" content="fr_FR" />
+    <meta property="og:locale:alternate" content="es_ES" />
+    <meta property="og:site_name" content="IMDb" />
 
-<meta property="og:audio" content="https://example.com/bond/theme.mp3" />
-<meta property="og:description"
-    content="Sean Connery found fame and fortune as the suave, sophisticated British agent, James Bond." />
-<meta property="og:determiner" content="the" />
-<meta property="og:locale" content="en_GB" />
-<meta property="og:locale:alternate" content="fr_FR" />
-<meta property="og:locale:alternate" content="es_ES" />
-<meta property="og:site_name" content="IMDb" />
+    <!--og: video example:-->
 
-<!--og: video example:-->
-
-<meta property="og:video" content="https://example.com/bond/trailer.swf" />
-<meta property="og:video" content="https://example.com/movie.swf" />
-<meta property="og:video:secure_url" content="https://secure.example.com/movie.swf" />
-<meta property="og:video:type" content="application/x-shockwave-flash" />
-<meta property="og:video:width" content="400" />
-<meta property="og:video:height" content="300" />
+    <meta property="og:video" content="https://example.com/bond/trailer.swf" />
+    <meta property="og:video" content="https://example.com/movie.swf" />
+    <meta property="og:video:secure_url" content="https://secure.example.com/movie.swf" />
+    <meta property="og:video:type" content="application/x-shockwave-flash" />
+    <meta property="og:video:width" content="400" />
+    <meta property="og:video:height" content="300" />
 
 <!-- A full image example:-->
 
