--- a/simplistic-side-by-side.html
+++ b/simplistic-side-by-side.html
@@ -3,6 +3,86 @@
     <head>
         <title>Semantic tags with two articles side by side</title>
         <meta charset=utf-8>
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="google-adsense-account" content="ca-pub-9639638377144073">
+	    <meta property="og:title" content="A Basic HTML5 Template">
+        <meta property="og:type" content="website">
+        <meta property="og:audio:type" content="audio/mpeg">
+        <meta property="og:description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
+        <meta property="og:image" content="image.png">
+        <meta name="keywords" content="HTML5, Node.js, Jquery">
+        <meta name="author" content="Orris Baker">
+	    <meta property="og:audio:type" content="audio/mpeg"> 
+        <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
+        <!-- Viewport for responsive web design -->
+	    <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="./js/scripts.js"></script>
+        <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+	    <link rel="stylesheet" href="./style.css"> 
+        <link rel="stylesheet" href="./style[1].css"> 
+        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+	    <link rel="stylesheet" href="./nav[1].css">
+        <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+        <link rel="stylesheet" href="./font-awesome.min[1].css">
+	    <link rel="icon" type="image/png" href="./weed.jpg">
+	    <link rel="icon" type="image/png" href="./flexy-logo.png">
+        <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+        
+        <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css” />
+        <!-- Font Awesome Icons -->
+        <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+        <!-- Plugin CSS -->
+        <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+	    <style>
+            body { width:500px; margin:auto;
+            }
+            header, nav, article, footer { display:block;
+            }
+            header { width:500px; background-color:#FF9966; text-align:center; margin:auto;
+            }
+            nav { float:left; width:25%; background-color: #FF9966; margin-bottom:10px;
+            }
+            article { float:right; width:70%; background-color:#FF9966; margin-bottom:10px;
+            }
+           footer { clear:both; background-color:#FF9966; text-align:center;
+            }
+            h2 { font-size:large; font-weight:bold; margin-top:0; margin-bottom:0;
+            }
+        </style>
+	    <!--Add conditional Javascript-->
+        <!-- Favicon-->	            
+        <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
+        <link rel="alternate" type="application/pdf" href="MainPage.pdf">
+	    <link rel="author" href="mailto:bakerorris0@gmail.comcom">
+	    <link rel="author" type="text/html" href="https://orris0.github.io/">
+        <!-- Bootstrap Icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- SimpleLightbox plugin CSS-->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->                      
+	    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+        <script src=”http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js”></script>
+        <script src=”js/jquery.mobile-1.0.1.min.js”></script>
+        <script type=”text/javascript” src=”assets/js/ui.js”></script>
+        <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
+        <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
+        
+        <!--Add conditional Javascript-->
+        <!--[if lte IE 8]>
+            <script src="js/html5.js" type="text/javascript"></script>
+        <![endif]-->
+    </head>
         <style>
             body { width:500px; margin:auto;
             }
