--- a/html5-nav.html
+++ b/html5-nav.html
@@ -1,8 +1,6 @@
-<!doctype html>
-<!--Everything you write should be using markups -->
-<!-- head section is communicating about the page to the browser -->
-<!-- Anything you write under head is not displayed on the browser content page. -->
+<!DOCTYPE html>
 <html ng-app lang="en">
+    <head>
 <!-- All the Tags should be under <html> -->
 <!-- Describing about the page -->
 
