--- a/html5-nav.html
+++ b/html5-nav.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html ng-app lang="en">
     <head>
-<!-- All the Tags should be under <html> -->
-<!-- Describing about the page -->
+        <title>The nav tag</title>
+        <meta charset=utf-8>
+        <link rel="stylesheet" type="text/css" href="nav-style.css">
+        <!--[if lte IE 8]>
+            <script src="html5.js"></script>
+        <![endif]-->
+    </head>
+<body>
+<div id=”container”>
+<header>
+<h1>header goes here</h1>
+</header>
+<nav>
+<ul>
+<li><a href="#" title="Page 2">Page Two</a></li>
+<li><a href="#" title="Page 3">Page Three</a></li>
+<li><a href="#" title="Page 4">Page Four</a></li>
 
-<head>
-    <!-- Required meta tags -->
-    <!-- Describing about the page -->
-    <!-- head section is communicating about the page to the browser -->
-    <!-- Anything you write under head is not displayed on the browser content page. -->
-    <meta charset="UTF-8">
-    <title>The nav tag</title>
 
+
+	
 	<!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
