--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
-<meta charset=utf-8>
+        <meta charset=utf-8>
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
 	    <meta property="og:title" content="A Basic HTML5 Template">
@@ -30,7 +30,6 @@
 	    <link rel="icon" type="image/png" href="./weed.jpg">
 	    <link rel="icon" type="image/png" href="./flexy-logo.png">
         <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-        
         <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css” />
         <!-- Font Awesome Icons -->
         <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -69,8 +68,7 @@
 	    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href=
- src=”http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js”></script>
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script src=”js/jquery.mobile-1.0.1.min.js”></script>
         <script type=”text/javascript” src=”assets/js/ui.js”></script>
         <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
